--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="filter">
           <div class="containerImage">
             <h1>A melhor loja de Jordan</h1>
-            <p>O tênis Jordan é fruto de uma velha e forte<br> parceria entre a Nike e o jogador Michael Jordan.</p>
+            <p class="animation">O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
           </div>
         </div>
       </div>
@@ -30,10 +30,16 @@
   </section>
   
   <main>
+    <h2>Destaques</h2>
+    <p>Frete grátis e chinelo de brinde é aqui, aproveite por tempo limitado. </p>
     <div class="containerMain">
 
     </div>
   </main>
+
+  <footer>
+    <p>Todos os direitos reservados.</p>
+  </footer>
 
   <script async type="module" src="./assets/js/app.js"></script>
 </body>
